<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--  タイトル  -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:text="@string/beacon_demo"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp">

                <!--  -->
                <Button
                    android:id="@+id/beacon_id_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/id_demo"/>

                <!-- -->
                <Button
                    android:id="@+id/temp_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_layout"
                    android:text="@string/temp_demo"
                    android:layout_marginLeft="8dp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!--  湿度(ID:2)-->
                <Button
                    android:id="@+id/humid_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/humid_demo"/>

                <!-- 気圧(ID:3)-->
                <Button
                    android:id="@+id/pressure_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/pressure_demo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <!--  電池残量  -->
                <Button
                    android:id="@+id/battery_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/battery_demo"/>

                <!--  ボタン識別子  -->
                <Button
                    android:id="@+id/id5_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/id5_demo"
                    android:singleLine="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!--  開閉(ID:6)-->
                <Button
                    android:id="@+id/open_close_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/open_close_demo"/>

                <!-- 人感(ID:7)-->
                <Button
                    android:id="@+id/human_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/human_demo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!--  開閉(ID:8)-->
                <Button
                    android:id="@+id/move_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_layout"
                    android:text="@string/move_demo"/>

                <!--  汎用  -->
                <Button
                    android:id="@+id/beacon_start_end_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_layout"
                    android:visibility="visible"
                    android:text="@string/start_end_demo"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <!--  スキャンモード変更  -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/beacon_mode_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_scanmode"
                    android:text="@string/mode_demo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!--  チェックボックス  -->
                <CheckBox
                    android:id="@+id/beacon_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/mode_checkbox"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
