<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nttdocomo.android.LinkingBeaconDemo.beacon.BeaconDemoActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_corners"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="16sp"
            android:text="@string/scan_text"/>

        <Button
            android:id="@+id/start_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/beacon_scan"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/filtering_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/id_filtering"/>

            <Button
                android:id="@+id/filtering_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_corners"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/scan_result"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/lineColor"
            />

        <ListView
            android:id="@+id/scan_result"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/time_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_app"/>

    </LinearLayout>

</LinearLayout>
